syntax = "proto3";

package mcc.fred.peering;
option go_package = ".;peering";

// Represents another node
service Node {
    rpc CreateKeygroup (CreateKeygroupRequest) returns (Empty);
    rpc DeleteKeygroup (DeleteKeygroupRequest) returns (Empty);
    rpc PutItem (PutItemRequest) returns (Empty);
    rpc StreamPut(stream PutItemRequest) returns (Empty);
    rpc GetItem (GetItemRequest) returns (ItemResponse);
    rpc GetAllItems (GetAllItemsRequest) returns (stream ItemResponse);
}

message Empty{}

message CreateKeygroupRequest {
    string keygroup = 1;
    int64 expiry = 2;
}

message DeleteKeygroupRequest {
    string keygroup = 1;
}

message PutItemRequest {
    string keygroup = 1;
    string id = 2;
    string val = 3;
    bool append = 4;
    bool tombstoned = 5;
    map<string, uint64> version = 6;
}

message GetItemRequest {
    string keygroup = 1;
    string id = 2;
}

message ItemResponse {
    repeated Data data = 1;
}

message GetAllItemsRequest {
    string keygroup = 1;
}

message Data {
    string id = 1;
    string val = 2;
    map<string, uint64> version = 3;
}

message UpdateItemRequest {
    string keygroup = 1;
    string id = 2;
    string val = 3;
    map<string, uint64> version = 4;
}

message AppendItemRequest {
    string keygroup = 1;
    string id = 2;
    string data = 3;
}